--- a/lepinguregister/src/main/webapp/app/home/home.component.html
+++ b/lepinguregister/src/main/webapp/app/home/home.component.html
@@ -28,5 +28,9 @@
       <span>Kui teile meeldib JHipster, siis ärge unustage anda meile tähte</span>
       <a href="https://github.com/jhipster/generator-jhipster" target="_blank" rel="noopener noreferrer">GitHub-is</a>!
     </p>
+
+    <p>
+      <a href="/act" target="_blank" rel="noopener noreferrer">Aktid</a>!
+    </p>
   </div>
 </div>
