--- a/akteerimine/src/main/webapp/app/entities/real-estate-services/modify/real-estate-service-modify-dialog.component.html
+++ b/akteerimine/src/main/webapp/app/entities/real-estate-services/modify/real-estate-service-modify-dialog.component.html
@@ -1,13 +1,12 @@
-<form *ngIf="realEstate" name="modifyForm" (ngSubmit)="confirmModify(realEstate.id!)">
+<form *ngIf="realEstate && actId" name="modifyForm" (ngSubmit)="confirmModify()">
     <div class="modal-header">
         <h4 class="modal-title" data-cy="actDeleteDialogHeading">Objekti "{{realEstate.name}}" korralised teenused</h4>
-
         <button type="button" class="btn-close" data-dismiss="modal" aria-hidden="true" (click)="cancel()"></button>
     </div>
 
     <div class="modal-body">
         <jhi-alert-error></jhi-alert-error>
-        <jhi-service [realEstateId]="realEstate.id"></jhi-service>
+        <jhi-service [realEstateId]="realEstate.id" [actId]="actId"></jhi-service>
     </div>
 
 </form>
