--- a/akteerimine/src/main/webapp/app/entities/service/list/service.component.html
+++ b/akteerimine/src/main/webapp/app/entities/service/list/service.component.html
@@ -5,7 +5,7 @@
   <jhi-alert></jhi-alert>
 
   <div class="alert alert-warning" id="no-result" *ngIf="services?.length === 0">
-    <span>Ei leitud ühtegi Services</span>
+    <span>Ei leitud ühtegi teenust</span>
   </div>
 
   <div class="table-responsive table-entities" id="entities" *ngIf="services && services.length > 0">
@@ -14,7 +14,7 @@
         <tr>
           <th scope="col">
             <div class="d-flex">
-              <span>Name</span>
+              <span>Teenus</span>
             </div>
           </th>
           <th scope="col">
@@ -38,10 +38,7 @@
       <tbody>
         <tr *ngFor="let service of services; trackBy: trackId" data-cy="entityTable">
           <td>
-            <div *ngIf="service.isEdit">
-              <input type="text" [(ngModel)]="service.name" class="form-control"/>
-            </div>
-            <div *ngIf="!service.isEdit">
+            <div>
               {{service.name}}
             </div>
           </td>
@@ -55,7 +52,9 @@
           </td>
           <td>
             <div *ngIf="service.isEdit">
-              <input type="text" [(ngModel)]="service.validFrom" class="form-control"/>
+              <input type="datetime-local" [(ngModel)]="service.validFrom"
+                     class="form-control"
+              />
             </div>
             <div *ngIf="!service.isEdit">
               {{service.validFrom | formatMediumDatetime}}
@@ -63,7 +62,14 @@
           </td>
           <td>
             <div *ngIf="service.isEdit">
-              <input type="text" [(ngModel)]="service.validTo" class="form-control"/>
+              <input [(ngModel)]="service.validTo"
+                     id="field_validTo"
+                     data-cy="validTo"
+                     type="datetime-local"
+                     class="form-control"
+                     name="validTo"
+                     placeholder="YYYY-MM-DD HH:mm"
+              />
             </div>
             <div *ngIf="!service.isEdit">
               {{service.validTo | formatMediumDatetime}}
