--- a/akteerimine/src/main/webapp/app/home/home.component.html
+++ b/akteerimine/src/main/webapp/app/home/home.component.html
@@ -1,56 +1,6 @@
 <div class="row">
-  <div class="col-md-3">
-    <span class="hipster img-fluid rounded"></span>
-  </div>
-
   <div class="col-md-9">
-    <h1 class="display-4"><span jhiTranslate="home.title">Tere tulemast, Java Hipster!</span> (Akteerimine)</h1>
-
-    <p class="lead" jhiTranslate="home.subtitle">See on teie avaleht</p>
-
-    <p jhiTranslate="home.question">Kui teil on küsimusi JHipster kohta:</p>
-
-    <ul>
-      <li>
-        <a href="https://www.jhipster.tech/" target="_blank" rel="noopener noreferrer" jhiTranslate="home.link.homepage"
-          >JHipster koduleht</a
-        >
-      </li>
-      <li>
-        <a
-          href="https://stackoverflow.com/tags/jhipster/info"
-          target="_blank"
-          rel="noopener noreferrer"
-          jhiTranslate="home.link.stackoverflow"
-          >JHipster Stack Overflow-s</a
-        >
-      </li>
-      <li>
-        <a
-          href="https://github.com/jhipster/generator-jhipster/issues?state=open"
-          target="_blank"
-          rel="noopener noreferrer"
-          jhiTranslate="home.link.bugtracker"
-          >JHipster veahaldus</a
-        >
-      </li>
-      <li>
-        <a href="https://gitter.im/jhipster/generator-jhipster" target="_blank" rel="noopener noreferrer" jhiTranslate="home.link.chat"
-          >JHipster avalik jututuba</a
-        >
-      </li>
-      <li>
-        <a href="https://twitter.com/jhipster" target="_blank" rel="noopener noreferrer" jhiTranslate="home.link.follow"
-          >jälgi @jhipster Twitteris</a
-        >
-      </li>
-    </ul>
-
-    <p>
-      <span jhiTranslate="home.like">Kui teile meeldib JHipster, siis ärge unustage anda meile tähte</span>
-      <a href="https://github.com/jhipster/generator-jhipster" target="_blank" rel="noopener noreferrer" jhiTranslate="home.github"
-        >GitHub-is</a
-      >!
-    </p>
+    <h1 class="display-4">Akteerimine</h1>
+    <h3><a [routerLink]="['/act']">Aktid</a></h3>
   </div>
 </div>
