--- a/lepinguregister/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/lepinguregister/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -1,9 +1,7 @@
 <nav data-cy="navbar" class="navbar navbar-dark navbar-expand-md bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand logo" routerLink="/" (click)="collapseNavbar()">
-      <span class="logo-img"></span>
-      <span jhiTranslate="global.title" class="navbar-title">Lepinguregister</span>
-      <span class="navbar-version">{{ version }}</span>
+      <span jhiTranslate="global.title" class="navbar-title">Riigi Kinnisvara - Lepinguregister</span>
     </a>
     <a
             class="navbar-toggler d-lg-none"
