Mail config, fixes

--- a/akteerimine/src/main/webapp/app/entities/act/list/act.component.html
+++ b/akteerimine/src/main/webapp/app/entities/act/list/act.component.html
@@ -8,7 +8,7 @@
     <jhi-alert></jhi-alert>
 
     <div class="alert alert-warning" id="no-result" *ngIf="acts?.length === 0">
-        <span>Ei leitud ühtegi Acts</span>
+        <span>Ei leitud ühtegi akti</span>
     </div>
 
     <div class="table-responsive table-entities" id="entities" *ngIf="acts && acts.length > 0">
