--- a/akteerimine/src/main/webapp/app/entities/service/list/service.component.html
+++ b/akteerimine/src/main/webapp/app/entities/service/list/service.component.html
@@ -1,92 +1,98 @@
 <div>
 
-  <jhi-alert-error></jhi-alert-error>
+    <jhi-alert-error></jhi-alert-error>
 
-  <jhi-alert></jhi-alert>
+    <jhi-alert></jhi-alert>
 
-  <div class="alert alert-warning" id="no-result" *ngIf="services?.length === 0">
-    <span>Ei leitud ühtegi teenust</span>
-  </div>
+    <div class="alert alert-warning" id="no-result" *ngIf="services?.length === 0">
+        <span>Ei leitud ühtegi teenust</span>
+    </div>
 
-  <div class="table-responsive table-entities" id="entities" *ngIf="services && services.length > 0">
-    <table class="table table-striped" aria-describedby="page-heading">
-      <thead>
-        <tr>
-          <th scope="col">
-            <div class="d-flex">
-              <span>Teenus</span>
-            </div>
-          </th>
-          <th scope="col">
-            <div class="d-flex">
-              <span>Hind</span>
-            </div>
-          </th>
-          <th scope="col">
-            <div class="d-flex">
-              <span>Algus</span>
-            </div>
-          </th>
-          <th scope="col">
-            <div class="d-flex">
-              <span>Lõpp</span>
-            </div>
-          </th>
-          <th scope="col"></th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let service of services; trackBy: trackId" data-cy="entityTable">
-          <td>
-            <div>
-              {{service.name}}
-            </div>
-          </td>
-          <td>
-            <div *ngIf="service.isEdit">
-              <input type="text" [(ngModel)]="service.price" class="form-control"/>
-            </div>
-            <div *ngIf="!service.isEdit">
-              {{service.price}}
-            </div>
-          </td>
-          <td>
-            <div *ngIf="service.isEdit">
-              <input type="datetime-local" [(ngModel)]="service.validFrom"
-                     class="form-control"
-              />
-            </div>
-            <div *ngIf="!service.isEdit">
-              {{service.validFrom | formatMediumDatetime}}
-            </div>
-          </td>
-          <td>
-            <div *ngIf="service.isEdit">
-              <input [(ngModel)]="service.validTo"
-                     id="field_validTo"
-                     data-cy="validTo"
-                     type="datetime-local"
-                     class="form-control"
-                     name="validTo"
-                     placeholder="YYYY-MM-DD HH:mm"
-              />
-            </div>
-            <div *ngIf="!service.isEdit">
-              {{service.validTo | formatMediumDatetime}}
-            </div>
-          </td>
-          <td style="width: 15%;" class="text-center">
-            <div *ngIf="service.isEdit">
-              <button class="btn btn-sm btn-success" (click)="update(service)">Kinnita</button>
-              <button class="btn btn-sm btn-danger" (click)="service.isEdit = false">Tühista</button>
-            </div>
-            <div *ngIf="!service.isEdit">
-              <button class="btn btn-sm btn-success" (click)="onEdit(service)">Muuda</button>
-            </div>
+    <div class="table-responsive table-entities" id="entities" *ngIf="services && services.length > 0">
 
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
+        <form [formGroup]="editForm" (ngSubmit)="update()">
+            <table class="table table-striped" aria-describedby="page-heading">
+                <thead>
+                <tr>
+                    <th scope="col">
+                        <div class="d-flex">
+                            <span>Teenus</span>
+                        </div>
+                    </th>
+                    <th scope="col">
+                        <div class="d-flex">
+                            <span>Hind</span>
+                        </div>
+                    </th>
+                    <th scope="col">
+                        <div class="d-flex">
+                            <span>Algus</span>
+                        </div>
+                    </th>
+                    <th scope="col">
+                        <div class="d-flex">
+                            <span>Lõpp</span>
+                        </div>
+                    </th>
+                    <th scope="col"></th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr *ngFor="let service of services; trackBy: trackId" data-cy="entityTable">
+                    <td>
+                        <div>
+                            {{service.name}}
+                        </div>
+                    </td>
+                    <td>
+                        <div *ngIf="service.isEdit">
+                            <input type="text" formControlName="price" class="form-control"/>
+                        </div>
+                        <div *ngIf="!service.isEdit">
+                            {{service.price}}
+                        </div>
+                    </td>
+                    <td>
+                        <div *ngIf="service.isEdit">
+                            <input type="datetime-local"
+                                   class="form-control"
+                                   formControlName="validFrom"
+                                   placeholder="YYYY-MM-DD HH:mm"
+                            />
+                        </div>
+                        <div *ngIf="!service.isEdit">
+                            {{service.validFrom | formatMediumDatetime}}
+                        </div>
+                    </td>
+                    <td>
+                        <div *ngIf="service.isEdit">
+                            <input type="datetime-local"
+                                   class="form-control"
+                                   formControlName="validTo"
+                                   placeholder="YYYY-MM-DD HH:mm"
+                            />
+                        </div>
+                        <div *ngIf="!service.isEdit">
+                            {{service.validTo | formatMediumDatetime}}
+                        </div>
+                    </td>
+                    <td style="width: 15%;" class="text-center">
+                        <div *ngIf="service.editPending">
+                            <button class="btn btn-sm btn-secondary" [disabled]="true">Kinnitamisele saadetud</button>
+                        </div>
+                        <div *ngIf="!service.editPending">
+                            <div *ngIf="service.isEdit">
+                                <button class="btn btn-sm btn-success" type="submit" [disabled]="editForm.invalid || isSaving || !editForm.dirty">Kinnita</button>
+                                <button class="btn btn-sm btn-danger" (click)="service.isEdit = false">Tühista</button>
+                            </div>
+                            <div *ngIf="!service.isEdit">
+                                <button class="btn btn-sm btn-success" (click)="onEdit(service)">Muuda</button>
+                            </div>
+                        </div>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </form>
+    </div>
 </div>
