form validations, new production data, mail working

--- a/lepinguregister/src/main/webapp/app/entities/contract/list/contract.component.html
+++ b/lepinguregister/src/main/webapp/app/entities/contract/list/contract.component.html
@@ -14,7 +14,7 @@
             <tr>
                 <th scope="col">
                     <div class="d-flex">
-                        <span>Nr</span>
+                        <span>Number</span>
                     </div>
                 </th>
                 <th scope="col">
@@ -27,7 +27,7 @@
             <tbody>
             <tr *ngFor="let contract of contracts; trackBy: trackId" data-cy="entityTable">
                 <td>
-                    {{ contract.id }}
+                    {{ contract.number }}
                 </td>
                 <td>
                     {{ contract.name }}
