--- a/akteerimine/src/main/webapp/app/entities/service/list/service.component.html
+++ b/akteerimine/src/main/webapp/app/entities/service/list/service.component.html
@@ -49,7 +49,7 @@
                             <input type="text" formControlName="price" class="form-control"/>
                         </div>
                         <div *ngIf="!service.isEdit">
-                            {{service.price}}
+                            {{service.price}} €
                         </div>
                     </td>
                     <td>
@@ -71,6 +71,9 @@
                                    formControlName="validTo"
                                    placeholder="YYYY-MM-DD HH:mm"
                             />
+                            <span class="text-danger" font *ngIf="editForm.errors && service.isEdit">
+                        {{editForm.errors.message}}
+                    </span>
                         </div>
                         <div *ngIf="!service.isEdit">
                             {{service.validTo | formatMediumDatetime}}
@@ -82,7 +85,9 @@
                         </div>
                         <div *ngIf="!service.editPending">
                             <div *ngIf="service.isEdit">
-                                <button class="btn btn-sm btn-success" type="submit" [disabled]="editForm.invalid || isSaving || !editForm.dirty">Kinnita</button>
+                                <button class="btn btn-sm btn-success" type="submit"
+                                        [disabled]="editForm.invalid || isSaving || !editForm.dirty">Kinnita
+                                </button>
                                 <button class="btn btn-sm btn-danger" (click)="service.isEdit = false">Tühista</button>
                             </div>
                             <div *ngIf="!service.isEdit">
