--- a/lepinguregister/src/main/webapp/app/entities/contract/pending-list/pending-contract.component.html
+++ b/lepinguregister/src/main/webapp/app/entities/contract/pending-list/pending-contract.component.html
@@ -8,7 +8,7 @@
 
     <jhi-alert></jhi-alert>
 
-    <div class="alert alert-warning" id="no-result" *ngIf="contracts?.length === 0">
+    <div id="no-result" *ngIf="contracts?.length === 0">
         <span jhiTranslate="contract.missing"></span>
     </div>
 
